Added laravel debug bar

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "spatie/laravel-permission": "^5.3"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
