--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
+        "pragmarx/countries": "^0.7.2",
         "spatie/laravel-permission": "^5.3"
     },
     "require-dev": {
