--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
         "lodash": "^4.17.19",
         "overlayscrollbars": "^1.13.0",
         "popper.js": "^1.16.1",
-        "postcss": "^ 8.2.13",
+        "postcss": ">=8.2.13",
         "postcss-import": "^14.0.1",
-        "resolve-url-loader": "^4.0.0",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.43.4",
         "sass-loader": "^12.1.0",
         "tailwindcss": "^2.2.2"
