--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
-        "pragmarx/countries": "^0.7.2",
+        "nnjeim/world": "^1.1",
         "spatie/laravel-permission": "^5.3"
     },
     "require-dev": {
