--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,16 +1,36 @@
 risky: false
+
 version: 8.1
+
 preset: recommended
+
+tab-width: 4
+
+use-tabs: false
+
+enabled:
+  - long_array_syntax
+  - strict
+  - unalign_double_arrow
+
+disabled:
+  - align_double_arrow
+  - short_array_syntax
+
 finder:
   exclude:
-    - "modules"
-    - "node_modules"
-    - "nova"
-    - "nova-components"
-    - "storage"
-    - "spark"
-    - "vendor"
-  name: "*.php"
+    - "tests"
+  name:
+    - "*.php"
   not-name:
-    - "*.blade.php"
-    - "_ide_helper.php"
+    - "*Stub.php"
+  contains:
+    - "Foo"
+  not-contains:
+    - "config"
+  path:
+    - "foo/Stuff"
+  not-path:
+    - "libraries"
+  depth:
+    - "< 3"
