--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,36 +1,22 @@
 risky: false
-
 version: 8.1
-
 preset: recommended
-
-tab-width: 4
-
-use-tabs: false
-
-enabled:
-  - long_array_syntax
-  - strict
-  - unalign_double_arrow
-
-disabled:
-  - align_double_arrow
-  - short_array_syntax
-
 finder:
   exclude:
-    - "tests"
-  name:
-    - "*.php"
+    - "modules"
+    - "node_modules"
+    - "nova"
+    - "nova-components"
+    - "storage"
+    - "spark"
+    - "vendor"
+  name: "*.php"
   not-name:
-    - "*Stub.php"
-  contains:
-    - "Foo"
-  not-contains:
-    - "config"
-  path:
-    - "foo/Stuff"
-  not-path:
-    - "libraries"
-  depth:
-    - "< 3"
+    - "*.blade.php"
+    - "_ide_helper.php"
+php: true
+js: false
+ts: false
+css: false
+vue: false
+py: false
