--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,8 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="contact@${APP_NAME}.com"
 MAIL_FROM_NAME="${APP_NAME}"
+MAIL_REPLY_ADDRESS="contact@${APP_NAME}.com"
+MAIL_REPLY_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
