--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,13 @@
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
         "jeroennoten/laravel-adminlte": "^3.7",
-        "laravel/framework": "^9.0",
+        "laravel/framework": "^9.36",
         "laravel/jetstream": "^2.6",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.5",
         "nnjeim/world": "^1.1",
+        "spatie/laravel-model-status": "^1.11",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
