--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.5",
         "nnjeim/world": "^1.1",
+        "opcodesio/log-viewer": "^1.7",
         "spatie/laravel-model-status": "^1.11",
         "spatie/laravel-permission": "^5.5"
     },
