--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@alpinejs/persist": "^3.10.5",
         "@fortawesome/fontawesome-free": "^6.2.1",
         "alpinejs": "^3.10.5"
     }
