--- a/.github/workflows/laravel-tests.yml
+++ b/.github/workflows/laravel-tests.yml
@@ -20,6 +20,10 @@ jobs:
       with:
         php-version: '8.1'
     - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
     - name: Set up MySQL
       run: |
         sudo /etc/init.d/mysql start
@@ -28,6 +32,8 @@ jobs:
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+    - name: Build Node Dependencies
+      run: npm run build
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
