--- a/.env.example
+++ b/.env.example
@@ -55,7 +55,4 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 LOGO_PATH="img/logo/logo.jpg"
 
-#customize portal look and feel see https://github.com/jeroennoten/Laravel-AdminLTE/wiki/Layout-and-Styling-Configuration#admin-panel-classes
-
-ADMINLTE_CLASSES_SIDEBAR="sidebar-dark-primary elevation-4"
-ADMINLTE_CLASSES_TOPNAV="navbar-white navbar-light"
+#customize look and feel
